--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,3 +11,11 @@
 修复了若干设置模块的BUG
 
 提升了设置模块的灵活性，提供PACKED选项来修改配置文件位置
+
+[0.0.1-Rewrite-Dev3]
+
+修复了一个封装模式下无法使用基于TKINTER的功能的BUG
+
+修改了配置文件格式，提高可读性
+
+预告：0.0.1-Rewrite-Dev5中会有大改动
